--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -223,7 +223,7 @@
         list.push("P1-Villa-44,Ravindra Verma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-46,Vikas Mahala,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-47,Manoj Ji,-3000,2000,3000,3000,3000,3000,,,,"); 
+        list.push("P1-Villa-47,Manoj Ji,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-48,R C Sharma ,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-49,Sunita Verma,-11000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-50,Abhishek Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
@@ -287,7 +287,7 @@
         list.push("P1-Villa-106,Vandana Soni,0,0,0,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-107,Rita Soni,0,0,0,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-108,Shanky Munjal,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-109,Satish Kumar,-17000,,,,,,,,,"); 
+        list.push("P1-Villa-109,Satish Kumar,0,2000,3000,3000,3000,3000,3000,3000,,"); 
         list.push("P1-Villa-110,Deepika Sharma,-17000,,,,,,,,,"); 
         list.push("P1-Villa-111,Rajat Kumar Sharma,-17000,,,,,,,,,"); 
 
