--- a/index.html
+++ b/index.html
@@ -120,14 +120,15 @@
 	   
  --> 
  <marquee  scrollamount="5" style= "color:rgb(216, 21, 132) ; font-size:20px" height="30px" > 
-	
-	
+	<h4><span style="color:rgb(155, 5, 75)">Ganesh Visarjan on Sunday 15 Sep, 3:30 PM.</span> <span style="color:blue">  Prize distribution planned on the same day. </span> </h4>
+</marquee>
+
+<marquee  scrollamount="5" style= "color:rgb(216, 21, 132) ; font-size:20px" height="30px" > 
 	<h4><span style="color:rgb(155, 5, 75)">On APP details are updated till </span> <span style="color:blue">  12 Sep 2024, 07:30 PM </span> </h4>
-	
 </marquee>
 
 <p style= "color:rgb(10, 131, 20)">Till now missed to pay maintenance amount villa owners list. if any correction required please update in group or at feedback section of App. </p>
-<img class="NO-CACHE" data-src="img/Pending_10Sep24.jpg" width="267px" heigt="380px" alt="" style="margin-bottom: 22px;">
+<img class="NO-CACHE" data-src="img/Pending_10Sep24.jpg" width="320px" heigt="400px" alt="" style="margin-bottom: 22px;">
 
 <!--
    	   
