--- a/index.html
+++ b/index.html
@@ -120,12 +120,20 @@
 	   
  --> 
  <marquee  scrollamount="5" style= "color:rgb(216, 21, 132) ; font-size:20px" height="30px" > 
+	<h4><span style="color:rgb(155, 5, 75)">On APP details are updated till </span> <span style="color:blue">  14 Sep 2024, 01:00 PM </span> </h4>
+</marquee>
+
+<marquee  scrollamount="6" style= "color:rgb(216, 21, 132) ; font-size:20px" height="70px" > 
+	<h1><span style="color:rgba(230, 7, 148, 0.915)">As discussed with Society Secretary....,</span> <span style="color:rgb(12, 146, 10)">  Now details are not necessary to update on App, commitee maintaining details at their end, committee will publish the details in group. </span> </h1>
+</marquee>
+
+
+ <marquee  scrollamount="5" style= "color:rgb(216, 21, 132) ; font-size:20px" height="30px" > 
 	<h4><span style="color:rgb(155, 5, 75)">Ganesh Visarjan on Sunday 15 Sep, 3:30 PM.</span> <span style="color:blue">  Prize distribution planned on the same day. </span> </h4>
 </marquee>
 
-<marquee  scrollamount="5" style= "color:rgb(216, 21, 132) ; font-size:20px" height="30px" > 
-	<h4><span style="color:rgb(155, 5, 75)">On APP details are updated till </span> <span style="color:blue">  12 Sep 2024, 07:30 PM </span> </h4>
-</marquee>
+
+
 
 <p style= "color:rgb(10, 131, 20)">Till now missed to pay maintenance amount villa owners list. if any correction required please update in group or at feedback section of App. </p>
 <img class="NO-CACHE" data-src="img/Pending_10Sep24.jpg" width="320px" heigt="400px" alt="" style="margin-bottom: 22px;">
@@ -376,7 +384,7 @@
 							</h2>
 							<p style="color: rgb(7, 23, 144)">Next Planned Meeting at Club House on 4th August 2024, Sunday at 11:15 AM.</p> 
 
-							<p style="color: rgb(4, 80, 24)">As per decided in meeting , socity meeting on every 4th Sunday at 10 AM.</p> 
+							<p style="color: rgb(4, 80, 24)">As per decided in meeting , society meeting on every 4th Sunday at 10 AM.</p> 
 							<!--<p style="color: red">Next Meeting date not decided yet.</p> -->
 							<!--<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>
 							
