--- a/index.html
+++ b/index.html
@@ -122,16 +122,14 @@
  <marquee  scrollamount="5" style= "color:rgb(216, 21, 132) ; font-size:20px" height="30px" > 
 	<h4><span style="color:rgb(155, 5, 75)">On APP details are updated till </span> <span style="color:blue">  14 Sep 2024, 01:00 PM </span> </h4>
 </marquee>
-
-
-
-
+<marquee  scrollamount="4" style= "color:rgb(216, 21, 132) ; font-size:20px" height="30px" > 
+	<h4><span style="color:rgba(230, 7, 148, 0.915)">As discussed with Society Secretary....,</span> <span style="color:rgb(12, 146, 10)">  Now details are not necessary to update on App, commitee maintaining details at their end, committee will publish the details in group. </span> </h4>
+</marquee>
  <marquee  scrollamount="5" style= "color:rgb(216, 21, 132) ; font-size:20px" height="30px" > 
 	<h4><span style="color:rgb(155, 5, 75)">Ganesh Visarjan on Sunday 15 Sep, 3:30 PM.</span> <span style="color:blue">  Prize distribution planned on the same day. </span> </h4>
 </marquee>
 
-	<h1><span style="color:rgba(230, 7, 148, 0.915)">As discussed with Society Secretary....,</span> <span style="color:rgb(12, 146, 10)">  Now details are not necessary to update on App, commitee maintaining details at their end, committee will publish the details in group. </span> </h1>
-
+	
 
 
 <p style= "color:rgb(10, 131, 20)">Till now missed to pay maintenance amount villa owners list. if any correction required please update in group or at feedback section of App. </p>
