--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -209,7 +209,7 @@
         list.push("P1-Villa-30,Peeyush Mathur,0,0,0,0,,,,,,");   
         list.push("P1-Villa-31,Mahesh Taparia,-6000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-32,Peeyush Verma,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-33,Prakash Joshi,-11000,2000,2000,2000,,,,,,");
+        list.push("P1-Villa-33,Prakash Joshi,0,2000,3000,3000,3000,3000,3000,,,");
         list.push("P1-Villa-34,Vijay Meena,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-35,D V Saraswat,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,0,2000,3000,3000,3000,3000,3000,,,"); 
@@ -225,12 +225,12 @@
         list.push("P1-Villa-46,Vikas Mahala,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-47,Manoj Ji,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-48,R C Sharma ,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-49,Sunita Verma,-11000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-49,Sunita Verma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-50,Abhishek Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-51,Jatin Kumar,-11000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-52,Shailesh Bansal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-53,Rohit Jain,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-54,Vinod Kumar Garg,-3000,2000,3000,3000,3000,3000,,,,"); 
+        list.push("P1-Villa-54,Vinod Kumar Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-55,Raj Kamal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
