--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -235,7 +235,7 @@
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-59,Pawan Jaiman,0,0,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-60,Santra Devi,-17000,,,,,,,,,"); 
+        list.push("P1-Villa-60,Santra Devi,-500,2000,3000,3000,3000,3000,2500,,,"); 
         list.push("P1-Villa-61,Divanshi Dhanjani,0,2000,3000,3000,3000,3000,3000,,,"); 
 
         list.push("P1-Villa-62,Lal Singh,-17000,,,,,,,,,"); 
@@ -275,7 +275,7 @@
         list.push("P1-Villa-95,Naresh Mathur,0,0,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-96,George Pal Singh,0,2000,3000,3000,3000,3000,3000,,,");
         list.push("P1-Villa-97,Surendra Kumawat,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-98,Hitesh Jain,-3000,2000,3000,3000,3000,3000,,,,"); 
+        list.push("P1-Villa-98,Hitesh Jain,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-99,Sakshi Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-100,Akansha Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-101,Laxmi Agarwal,-17000,,,,,,,,,"); 
