--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -184,10 +184,10 @@
         list.push("P1-Villa-05,Shishir Maltiyar,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-06,Hemant Kumar,-11000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-07,Rahul Pandey,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-08,Anil Sharma,-11000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-08,Anil Sharma,-2500,2000,3000,3000,3000,3000,500,,,"); 
         list.push("P1-Villa-09,Raghvendra Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-10,Jogendra Sachdeva,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-11,Sundeep Mahala,-6000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-11,Sundeep Mahala,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-12,Gaurav Kothari,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-13,Anil Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-14,Ayush Shandilya,0,2000,3000,3000,3000,3000,3000,,,"); 
@@ -207,7 +207,7 @@
         list.push("P1-Villa-28,Mohit Juneja,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-29,Lokshita Mathur,0,0,0,0,,,,,,"); 
         list.push("P1-Villa-30,Peeyush Mathur,0,0,0,0,,,,,,");   
-        list.push("P1-Villa-31,Mahesh Taparia,-6000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-31,Mahesh Taparia,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-32,Peeyush Verma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-33,Prakash Joshi,0,2000,3000,3000,3000,3000,3000,,,");
         list.push("P1-Villa-34,Vijay Meena,0,2000,3000,3000,3000,3000,3000,,,"); 
