--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -265,7 +265,7 @@
         list.push("P1-Villa-84,Tarun Sharda,-17000,,,,,,,,,"); 
         list.push("P1-Villa-85,Pradeep Verma,-300,2000,3000,3000,3000,3000,2700,,,"); 
         list.push("P1-Villa-86,Priyanka & Surendra Agrawal,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-87,Devendra Singh,-6300,2000,3000,3000,2700,,,,,"); 
+        list.push("P1-Villa-87,Devendra Singh,-3300,2000,3000,3000,3000,2700,,,,"); 
         list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-89,Khem Chand Nagal,-3000,0,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-90,Vivek Dubey,-3000,0,3000,3000,3000,3000,,,,"); 
