--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 </marquee>
 
 	
+	<hr style="height:2px;border-width:0;color:rgb(12, 155, 53);background-color:rgb(17, 211, 33)">
 
 
 <p style= "color:rgb(10, 131, 20)">Till now missed to pay maintenance amount villa owners list. if any correction required please update in group or at feedback section of App. </p>
